--- a/schemas/build.gradle
+++ b/schemas/build.gradle
@@ -5,3 +5,19 @@
  * Learn more about Gradle by exploring our Samples at https://docs.gradle.org/8.14/samples
  * This project uses @Incubating APIs which are subject to change.
  */
+plugins {
+    id 'java'
+    alias libs.plugins.avro
+}
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    implementation libs.avro
+}
+
+avro {
+    outputCharacterEncoding = "UTF-8"
+}
