--- a/settings.gradle
+++ b/settings.gradle
@@ -6,4 +6,13 @@
  * This project uses @Incubating APIs which are subject to change.
  */
 
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        mavenCentral()
+    }
+}
+
 rootProject.name = 'KafkaExample'
+
+include(':schemas')
